# Genshin-Impact-Cal

./: CMakeLists.txt  README.md  gical.qrc  main.cpp
src/: bufferModel.cpp  bufferModel.hpp  columnModel.cpp  columnModel.hpp  constants.hpp  states.cpp  states.hpp  tableModel.cpp  tableModel.hpp  tools.cpp  tools.hpp
ui/: Buffer.qml  BufferBox.qml  BufferPage.qml  DynamicBox.qml  Main.qml  MenuRec.qml  RelicComboBox.qml  RelicPanel.qml  RelicStatModel.qml  SingleRelicPanel.qml  Table.qml
